[package]
name          = "bitcomsvr"
version       = "0.1.0"
authors       = ["Jeff"]
edition       = "2018"
license       = "GPL"
readme        = "README.md"
documentation = "https://github.com/bitcomm-io/bitcomsvr"
repository    = "https://github.com/bitcomm-io/bitcomsvr"
description   = "Decentralized communication & Digital assets!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bitcomsvr"
path = "src/bin/startup.rs"


[dependencies]
async-stream = "0.3.0"
atoi = "0.4.0"
bytes = "1"
structopt = "0.3.14"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.2.2"

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }
